--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ jobs:
         - docker run -d --name orion1 --link mongodb:mongodb -p 1026:1026 fiware/orion -dbhost mongodb
       before_script:
         - npm run lint -C ./validator
-       
+
       script:
-         - node ./validator/validate.js -i common-schema.json -i geometry-schema.json -i specs/Weather/weather-schema.json -i specs/Alert/alert-schema.json -i specs/AgriFood/agrifood-schema.json -p specs -c true
+         - node ./validator/validate.js -i common-schema.json -i geometry-schema.json -i specs/Weather/weather-schema.json -i specs/Alert/alert-schema.json -i specs/AgriFood/agrifood-schema.json -i specs/Robot/schema.json -i specs/Robot/AutonomousMobileRobot/schema.json -i specs/Robot/AutonomousMobileRobot/Command/Message/schema.json -i specs/Robot/AutonomousMobileRobot/Command/ReturnMessage/schema.json -i specs/Robot/AutonomousMobileRobot/EmergencyCommand/Message/schema.json -i specs/Robot/AutonomousMobileRobot/EmergencyCommand/ReturnMessage/schema.json -i specs/Robot/AutonomousMobileRobot/StateMessage/schema.json -p specs -c true
 
     - stage: test
       name: "Unit Tests 3.7"
@@ -57,9 +57,9 @@ jobs:
         - docker run -d --name orion1 --link mongodb:mongodb -p 1026:1026 fiware/orion -dbhost mongodb
       before_script:
         - npm run lint -C ./validator
-       
+
       script:
-         - node ./validator/validate.js -i common-schema.json -i geometry-schema.json -i specs/Weather/weather-schema.json -i specs/Alert/alert-schema.json -i specs/AgriFood/agrifood-schema.json -p specs -c true
+         - node ./validator/validate.js -i common-schema.json -i geometry-schema.json -i specs/Weather/weather-schema.json -i specs/Alert/alert-schema.json -i specs/AgriFood/agrifood-schema.json -i specs/Robot/schema.json -i specs/Robot/AutonomousMobileRobot/schema.json -i specs/Robot/AutonomousMobileRobot/Command/Message/schema.json -i specs/Robot/AutonomousMobileRobot/Command/ReturnMessage/schema.json -i specs/Robot/AutonomousMobileRobot/EmergencyCommand/Message/schema.json -i specs/Robot/AutonomousMobileRobot/EmergencyCommand/ReturnMessage/schema.json -i specs/Robot/AutonomousMobileRobot/StateMessage/schema.json -p specs -c true
 
     - stage: test
       name: "Documentation Tests"
